update hieu active package to laravel 5.5

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hieu-le/active",
+    "name": "ibrand/laravel-active",
     "description": "The helper class for Laravel 4 applications to get active class base on current route",
     "keywords": ["laravel", "active", "routing"],
     "license": "MIT",
