--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,36 @@
 {
-    "name": "ibrand/laravel-active",
-    "description": "The helper class for Laravel 4 applications to get active class base on current route",
-    "keywords": ["laravel", "active", "routing"],
-    "license": "MIT",
+	"name": "ibrand/laravel-active",
+	"description": "The helper class for Laravel 4 applications to get active class base on current route",
+	"keywords": [
+		"laravel",
+		"active",
+		"routing"
+	],
+	"license": "MIT",
 	"homepage": "http://www.hieule.info/products/active-class-helper-laravel-4/",
-    "authors": [
-	{
-	    "name": "Hieu Le",
-	    "email": "letrunghieu.cse09@gmail.com",
-		"homepage": "http://www.hieule.info"
-	}
-    ],
-    "require": {
-		"php": ">=5.5.9",
-		"illuminate/http": "~5.0",
-		"illuminate/routing": "~5.0",
-		"illuminate/support": "~5.0"
-    },
-    "require-dev": {
-		"phpunit/phpunit": "~4.0",
+	"authors": [
+		{
+			"name": "Hieu Le",
+			"email": "letrunghieu.cse09@gmail.com",
+			"homepage": "http://www.hieule.info"
+		}
+	],
+	"require": {
+		"php": ">=7.2",
+		"illuminate/http": "^5.0|^6.0|^7.0|^8.0",
+		"illuminate/routing": "^5.0|^6.0|^7.0|^8.0",
+		"illuminate/support": "^5.0|^6.0|^7.0|^8.0"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "~8.0",
 		"mockery/mockery": "dev-master",
-        "codeclimate/php-test-reporter": "dev-master"
-    },
-    "autoload": {
+		"codeclimate/php-test-reporter": "dev-master"
+	},
+	"autoload": {
 		"psr-4": {
 			"HieuLe\\Active\\": "src/"
 		}
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+	},
+	"minimum-stability": "dev",
+	"prefer-stable": true
 }
